--- a/client/pokemon_jorhe/src/components/Card/Card.module.css
+++ b/client/pokemon_jorhe/src/components/Card/Card.module.css
@@ -16,7 +16,10 @@
     border-radius: 0px 0px 100px 20px;
     background-color: rgba(255, 255, 255, 0.2);
     box-shadow: 0 2px 5px whitesmoke, inset 0 -2px 50px rgba(255, 255, 255, 0.5); /* Create the bevel effect */
+  }
 
+.box:hover{
+  box-shadow: 0 0px 50px whitesmoke;
 }
   
   .image {
@@ -25,6 +28,12 @@
     margin-top: 40px;
     width: 280px;
     height: auto;
+    transition: 1s;
+  }
+
+.image:hover{
+    transform: scale(1.1);
+    transition: 1s;
   }
 
   .info{
