--- a/client/pokemon_jorhe/src/components/Cards/Cards.module.css
+++ b/client/pokemon_jorhe/src/components/Cards/Cards.module.css
@@ -7,14 +7,20 @@
   }
   
   .cards {
+    margin-top: 30px;
     display: grid;
     justify-content: space-around;
-    align-items: stretch;
+    align-items: center;
     align-content: center;
     grid-template-columns: repeat(auto-fill, minmax(380px, 1fr));
     gap: 30px;
     justify-items: center;
-    min-height: calc(100vh - 5rem);
     text-transform: capitalize;
+
+  }
+
+  .styles.foundPokemon{
+    color: black;
+    font-size: 10rem;
 
   }
