--- a/client/pokemon_jorhe/src/components/Navbar/Navbar.module.css
+++ b/client/pokemon_jorhe/src/components/Navbar/Navbar.module.css
@@ -1,6 +1,6 @@
 .container{
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     position: fixed;
     top: 0;
@@ -8,11 +8,41 @@
     width: 100%;
     height: 50px;
     z-index: 9999;
-    padding: 10px;
+    padding: 10px 50px;
     background-color: rgb(255, 255, 255, 0.5); /* Set a solid background color */
     box-shadow: 0 2px 5px whitesmoke, inset 0 -2px 50px rgba(255, 255, 255, 0.5); /* Create the bevel effect */
 }
 
 .container img{
     height: 50px;
+}
+
+.navUl{
+    list-style: none;
+}
+
+.navUl li{
+    display: inline-block;
+    margin-left: 50px;
+}
+
+.navButton{
+    font-family: 'Secular One', sans-serif;
+    font-size: 1.2rem;
+    letter-spacing: 1px;
+    font-weight: 600;
+    text-decoration: none;
+    color: black;
+}
+
+.navUl button{
+    font-family: 'Secular One', sans-serif;
+    font-size: 1.2rem;
+    letter-spacing: 1px;
+    font-weight: 600;
+    text-decoration: none;
+    color: black;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
 }
