--- a/client/pokemon_jorhe/src/components/Cards/Cards.module.css
+++ b/client/pokemon_jorhe/src/components/Cards/Cards.module.css
@@ -19,8 +19,14 @@
 
   }
 
-  .styles.foundPokemon{
-    color: black;
-    font-size: 10rem;
+  .cards p{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-left: 20px;
+    font-family: 'Secular One', sans-serif;
+    font-size: 3rem;
+    font-weight: bold;
+    color: white;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);  }
 
-  }
