--- a/client/pokemon_jorhe/src/components/CreatePokemon/CreatePokemon.module.css
+++ b/client/pokemon_jorhe/src/components/CreatePokemon/CreatePokemon.module.css
@@ -1,9 +1,10 @@
 .container{
-    flex-direction: column;
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     min-height: 100vh;
     width: 100%;
-    background-image: url('../../assets/landscapePokemon1.jpg');
+    background-image: url('../../assets/landscapepoke03.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size:cover;
@@ -11,21 +12,65 @@
     font-family: 'Secular One', sans-serif;
 }
 
-.container h1{
+.create{
+    color: white;
+    letter-spacing: 5px;
+    font-family: 'Secular One', sans-serif;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    width: 100%;
-    margin-bottom: 30px;
-
+    justify-content: center;
+    width: 500px;
+    height: 550px;
+    margin-right: 150px;
 }
+
+.box{
+    margin-top: 20px;
+    position: relative;
+    width: 330px;
+    height: 280px;
+    border-radius: 0px 0px 100px 20px;
+    background-color: rgba(255, 255, 255, 0.2);
+    box-shadow: 0 2px 5px whitesmoke, inset 0 -2px 50px rgba(255, 255, 255, 0.5);
+}
+
+.info{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items:flex-start;
+    justify-content: flex-start;
+    font-family: 'Secular One', sans-serif;
+    margin-top: -30px;
+    margin-left: 10px;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: white;
+    font-size: 1.7rem;
+  }
+
+  .image img {
+    position: absolute;
+    margin-left: 100px;
+    margin-top: 40px;
+    max-width: 250px;
+    height: auto;
+    transition: 1s;
+  }
+
+.image img:hover{
+    transform: scale(1.1);
+    transition: 1s;
+  }
 
 .boxForm{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 400px;
-    height: auto;
+    min-width: 400px;
+    max-height: 550px;
     padding: 30px;
     margin-left: 150px;
     border-radius: 0px 0px 100px 20px;
@@ -39,6 +84,15 @@
     width: 300px;
     font-family: 'Secular One', sans-serif;
 
+}
+
+.form p{
+    font-family: 'Secular One', sans-serif;
+    color: white;
+    display: flex;
+    margin-top: 25px;
+    margin-bottom: 10px;
+    font-weight: bold;
 }
 
 .index{
@@ -64,7 +118,7 @@
     text-indent: 10px;
     padding: 5px 0px;
     font-weight: bold;
-    font-size: 1.2rem;
+    font-size: 1rem;
     border-radius: 5px;
     border: none;
     background-color: transparent;
@@ -110,7 +164,7 @@
     height: 20px;
     text-indent: 30px;
     padding: 5px 0px;
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: bold;
     letter-spacing: 2px;
     border-radius: 5px;
@@ -135,6 +189,38 @@
     margin-bottom: none;
     
   }
+
+.types{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: 2px 20px;
+    font-family: 'Secular One', sans-serif;
+    font-weight: bold;
+}
+
+.types input{
+    display: flex;
+    background-color: transparent;
+    background-image: linear-gradient(rgba(255, 255, 255, 0.1), rgba(0, 0, 0, 0.1));
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5), inset 0 -2px 5px rgba(255, 255, 255, 0.5);
+    padding: 20px 20px;
+}
+
+.types input:hover{
+    background: transparent;
+    transform: translateY(-2px); 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5), inset 0 -4px 8px rgba(255, 255, 255, 0.5); 
+}
+
+.types label{
+    color: white;
+    display: flex;
+    width: 70px;
+    gap: 0px 5px;
+
+}
 
 .form button{
     margin-top: 30px;
